var files_dup =
[
    [ "address_monitor.cc", "address__monitor_8cc.html", "address__monitor_8cc" ],
    [ "tests/address_monitor.cc", "tests_2address__monitor_8cc.html", null ],
    [ "address_monitor.h", "address__monitor_8h.html", [
      [ "AddressMonitor", "classhub_1_1service_1_1AddressMonitor.html", "classhub_1_1service_1_1AddressMonitor" ],
      [ "BalanceChange", "structhub_1_1service_1_1AddressMonitor_1_1BalanceChange.html", "structhub_1_1service_1_1AddressMonitor_1_1BalanceChange" ]
    ] ],
    [ "attachment_service.cc", "attachment__service_8cc.html", null ],
    [ "attachment_service.h", "attachment__service_8h.html", [
      [ "AttachmentService", "classhub_1_1service_1_1AttachmentService.html", "classhub_1_1service_1_1AttachmentService" ]
    ] ],
    [ "balance_subscription.cc", "balance__subscription_8cc.html", null ],
    [ "balance_subscription.h", "balance__subscription_8h.html", [
      [ "BalanceSubscription", "classhub_1_1cmd_1_1BalanceSubscription.html", "classhub_1_1cmd_1_1BalanceSubscription" ]
    ] ],
    [ "connection.h", "connection_8h.html", [
      [ "Transaction", "classhub_1_1db_1_1Transaction.html", "classhub_1_1db_1_1Transaction" ],
      [ "Connection", "classhub_1_1db_1_1Connection.html", "classhub_1_1db_1_1Connection" ]
    ] ],
    [ "connection_impl.h", "connection__impl_8h.html", [
      [ "TransactionImpl", "classhub_1_1db_1_1TransactionImpl.html", "classhub_1_1db_1_1TransactionImpl" ],
      [ "ConnectionImpl", "classhub_1_1db_1_1ConnectionImpl.html", "classhub_1_1db_1_1ConnectionImpl" ]
    ] ],
    [ "create_user.cc", "create__user_8cc.html", null ],
    [ "create_user.h", "create__user_8h.html", [
      [ "CreateUser", "classhub_1_1cmd_1_1CreateUser.html", "classhub_1_1cmd_1_1CreateUser" ]
    ] ],
    [ "db.cc", "db_8cc.html", "db_8cc" ],
    [ "db.h", "db_8h.html", "db_8h" ],
    [ "dummy_provider.h", "dummy__provider_8h.html", [
      [ "DummyProvider", "classhub_1_1auth_1_1DummyProvider.html", "classhub_1_1auth_1_1DummyProvider" ]
    ] ],
    [ "get_address_info.cc", "get__address__info_8cc.html", null ],
    [ "get_address_info.h", "get__address__info_8h.html", [
      [ "GetAddressInfo", "classhub_1_1cmd_1_1GetAddressInfo.html", "classhub_1_1cmd_1_1GetAddressInfo" ]
    ] ],
    [ "get_balance.cc", "get__balance_8cc.html", null ],
    [ "get_balance.h", "get__balance_8h.html", [
      [ "GetBalance", "classhub_1_1cmd_1_1GetBalance.html", "classhub_1_1cmd_1_1GetBalance" ]
    ] ],
    [ "get_deposit_address.cc", "get__deposit__address_8cc.html", null ],
    [ "get_deposit_address.h", "get__deposit__address_8h.html", [
      [ "GetDepositAddress", "classhub_1_1cmd_1_1GetDepositAddress.html", "classhub_1_1cmd_1_1GetDepositAddress" ]
    ] ],
    [ "get_user_history.cc", "get__user__history_8cc.html", null ],
    [ "get_user_history.h", "get__user__history_8h.html", [
      [ "GetUserHistory", "classhub_1_1cmd_1_1GetUserHistory.html", "classhub_1_1cmd_1_1GetUserHistory" ]
    ] ],
    [ "grpc.cc", "grpc_8cc.html", "grpc_8cc" ],
    [ "grpc.h", "grpc_8h.html", [
      [ "HubImpl", "classhub_1_1HubImpl.html", "classhub_1_1HubImpl" ]
    ] ],
    [ "commands/helper.cc", "commands_2helper_8cc.html", "commands_2helper_8cc" ],
    [ "commands/tests/helper.cc", "commands_2tests_2helper_8cc.html", "commands_2tests_2helper_8cc" ],
    [ "db/helper.cc", "db_2helper_8cc.html", null ],
    [ "commands/helper.h", "commands_2helper_8h.html", "commands_2helper_8h" ],
    [ "commands/tests/helper.h", "commands_2tests_2helper_8h.html", "commands_2tests_2helper_8h" ],
    [ "db/helper.h", "db_2helper_8h.html", [
      [ "helper", "structhub_1_1db_1_1helper.html", "structhub_1_1db_1_1helper" ]
    ] ],
    [ "hmac_provider.cc", "hmac__provider_8cc.html", null ],
    [ "tests/hmac_provider.cc", "tests_2hmac__provider_8cc.html", null ],
    [ "hmac_provider.h", "hmac__provider_8h.html", [
      [ "HMACProvider", "classhub_1_1auth_1_1HMACProvider.html", "classhub_1_1auth_1_1HMACProvider" ]
    ] ],
    [ "local_provider.cc", "local__provider_8cc.html", null ],
    [ "local_provider.h", "local__provider_8h.html", [
      [ "LocalSigningProvider", "classhub_1_1crypto_1_1LocalSigningProvider.html", "classhub_1_1crypto_1_1LocalSigningProvider" ]
    ] ],
    [ "local_signing_provider.cc", "local__signing__provider_8cc.html", null ],
    [ "main.cc", "main_8cc.html", "main_8cc" ],
    [ "manager.cc", "manager_8cc.html", null ],
    [ "manager.h", "manager_8h.html", [
      [ "AuthManager", "classhub_1_1auth_1_1AuthManager.html", "classhub_1_1auth_1_1AuthManager" ]
    ] ],
    [ "mariadb.cc", "mariadb_8cc.html", null ],
    [ "mariadb.h", "mariadb_8h.html", [
      [ "MariaDBConnection", "classhub_1_1db_1_1MariaDBConnection.html", null ]
    ] ],
    [ "pow.cc", "pow_8cc.html", null ],
    [ "pow.h", "pow_8h.html", [
      [ "POWProvider", "classhub_1_1iota_1_1POWProvider.html", "classhub_1_1iota_1_1POWProvider" ],
      [ "POWManager", "classhub_1_1iota_1_1POWManager.html", "classhub_1_1iota_1_1POWManager" ]
    ] ],
    [ "process_transfer_batch.cc", "process__transfer__batch_8cc.html", null ],
    [ "process_transfer_batch.h", "process__transfer__batch_8h.html", [
      [ "ProcessTransferBatch", "classhub_1_1cmd_1_1ProcessTransferBatch.html", "classhub_1_1cmd_1_1ProcessTransferBatch" ]
    ] ],
    [ "proto_sql_converter.cc", "proto__sql__converter_8cc.html", "proto__sql__converter_8cc" ],
    [ "proto_sql_converter.h", "proto__sql__converter_8h.html", "proto__sql__converter_8h" ],
    [ "provider.h", "provider_8h.html", [
      [ "AuthContext", "classhub_1_1auth_1_1AuthContext.html", "classhub_1_1auth_1_1AuthContext" ],
      [ "AuthProvider", "classhub_1_1auth_1_1AuthProvider.html", "classhub_1_1auth_1_1AuthProvider" ]
    ] ],
    [ "remote_pow.h", "remote__pow_8h.html", [
      [ "RemotePOW", "classhub_1_1iota_1_1RemotePOW.html", "classhub_1_1iota_1_1RemotePOW" ]
    ] ],
    [ "remote_signing_provider.cc", "remote__signing__provider_8cc.html", null ],
    [ "remote_signing_provider.h", "remote__signing__provider_8h.html", [
      [ "RemoteSigningProvider", "classhub_1_1crypto_1_1RemoteSigningProvider.html", "classhub_1_1crypto_1_1RemoteSigningProvider" ]
    ] ],
    [ "runner.cc", "runner_8cc.html", "runner_8cc" ],
    [ "commands/tests/runner.h", "commands_2tests_2runner_8h.html", [
      [ "CommandTest", "classhub_1_1CommandTest.html", "classhub_1_1CommandTest" ]
    ] ],
    [ "tests/runner.h", "tests_2runner_8h.html", [
      [ "Test", "classhub_1_1Test.html", "classhub_1_1Test" ]
    ] ],
    [ "scheduled_service.cc", "scheduled__service_8cc.html", null ],
    [ "tests/scheduled_service.cc", "tests_2scheduled__service_8cc.html", null ],
    [ "scheduled_service.h", "scheduled__service_8h.html", [
      [ "ScheduledService", "classhub_1_1service_1_1ScheduledService.html", "classhub_1_1service_1_1ScheduledService" ]
    ] ],
    [ "server.cc", "server_8cc.html", "server_8cc" ],
    [ "server.h", "server_8h.html", [
      [ "HubServer", "classhub_1_1HubServer.html", "classhub_1_1HubServer" ]
    ] ],
    [ "service.cc", "service_8cc.html", null ],
    [ "service.h", "service_8h.html", [
      [ "Service", "classhub_1_1service_1_1Service.html", "classhub_1_1service_1_1Service" ]
    ] ],
    [ "sign_bundle.cc", "sign__bundle_8cc.html", null ],
    [ "sign_bundle.h", "sign__bundle_8h.html", [
      [ "SignBundle", "classhub_1_1cmd_1_1SignBundle.html", "classhub_1_1cmd_1_1SignBundle" ]
    ] ],
    [ "sign_bundle_context.cc", "sign__bundle__context_8cc.html", null ],
    [ "sign_bundle_context.h", "sign__bundle__context_8h.html", [
      [ "SignBundleContext", "classhub_1_1auth_1_1SignBundleContext.html", "classhub_1_1auth_1_1SignBundleContext" ]
    ] ],
    [ "sqlite3.cc", "sqlite3_8cc.html", null ],
    [ "sqlite3.h", "sqlite3_8h.html", [
      [ "SQLite3Connection", "classhub_1_1db_1_1SQLite3Connection.html", null ]
    ] ],
    [ "sweep_detail.cc", "sweep__detail_8cc.html", null ],
    [ "sweep_detail.h", "sweep__detail_8h.html", [
      [ "SweepDetail", "classhub_1_1cmd_1_1SweepDetail.html", "classhub_1_1cmd_1_1SweepDetail" ]
    ] ],
    [ "sweep_info.cc", "sweep__info_8cc.html", null ],
    [ "sweep_info.h", "sweep__info_8h.html", [
      [ "SweepInfo", "classhub_1_1cmd_1_1SweepInfo.html", "classhub_1_1cmd_1_1SweepInfo" ]
    ] ],
    [ "sweep_service.cc", "sweep__service_8cc.html", null ],
    [ "sweep_service.h", "sweep__service_8h.html", [
      [ "SweepService", "classhub_1_1service_1_1SweepService.html", "classhub_1_1service_1_1SweepService" ]
    ] ],
    [ "sweep_subscription.cc", "sweep__subscription_8cc.html", null ],
    [ "sweep_subscription.h", "sweep__subscription_8h.html", [
      [ "SweepSubscription", "classhub_1_1cmd_1_1SweepSubscription.html", "classhub_1_1cmd_1_1SweepSubscription" ]
    ] ],
    [ "test_balance_subscription.cc", "test__balance__subscription_8cc.html", null ],
    [ "test_create_user.cc", "test__create__user_8cc.html", null ],
    [ "test_get_address_info.cc", "test__get__address__info_8cc.html", null ],
    [ "test_get_balance.cc", "test__get__balance_8cc.html", null ],
    [ "test_get_deposit_address.cc", "test__get__deposit__address_8cc.html", null ],
    [ "test_get_user_history.cc", "test__get__user__history_8cc.html", null ],
    [ "test_process_transfer_batch.cc", "test__process__transfer__batch_8cc.html", null ],
    [ "test_user_withdraw.cc", "test__user__withdraw_8cc.html", null ],
    [ "test_user_withdraw_cancel.cc", "test__user__withdraw__cancel_8cc.html", "test__user__withdraw__cancel_8cc" ],
    [ "trigger.cc", "trigger_8cc.html", null ],
    [ "types.h", "types_8h.html", "types_8h" ],
    [ "user_address_monitor.cc", "user__address__monitor_8cc.html", [
      [ "ByAddressID", "structtags_1_1ByAddressID.html", null ]
    ] ],
    [ "user_address_monitor.h", "user__address__monitor_8h.html", [
      [ "UserAddressMonitor", "classhub_1_1service_1_1UserAddressMonitor.html", "classhub_1_1service_1_1UserAddressMonitor" ]
    ] ],
    [ "user_withdraw.cc", "user__withdraw_8cc.html", null ],
    [ "user_withdraw.h", "user__withdraw_8h.html", [
      [ "UserWithdraw", "classhub_1_1cmd_1_1UserWithdraw.html", "classhub_1_1cmd_1_1UserWithdraw" ]
    ] ],
    [ "user_withdraw_cancel.cc", "user__withdraw__cancel_8cc.html", null ],
    [ "user_withdraw_cancel.h", "user__withdraw__cancel_8h.html", [
      [ "UserWithdrawCancel", "classhub_1_1cmd_1_1UserWithdrawCancel.html", "classhub_1_1cmd_1_1UserWithdrawCancel" ]
    ] ]
];